2016-09-19  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/77645
	* python/libstdcxx/v6/xmethods.py (DequeWorkerBase.index): Rename
	argument.
	(ListWorkerBase.get_value_from_node): Define new method.
	(ListFrontWorker.__call__, ListBackWorker.__call__): Use it.

2016-08-31  Ville Voutilainen  <ville.voutilainen@gmail.com>

	PR libstdc++/77395
	* include/std/type_traits (is_constructible): Forward-declare...
	(__is_base_to_derived_ref): ...and use here.
	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust.
	* testsuite/20_util/is_constructible/77395.cc: New.
	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc: Adjust.
	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc:
	Likewise.
	* testsuite/20_util/tuple/77395.cc: New.

2016-08-30  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-08-02  Jonathan Wakely  <jwakely@redhat.com>

	* scripts/testsuite_flags.in: Add -fno-show-column to cxxflags.

	Backport from mainline
	2016-07-27  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/20_util/forward/1_neg.cc: Move dg-error to right line.

2016-08-23  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/23_containers/map/77334.cc: Use dg-options for C++11.

2016-08-23  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/77334
	* include/bits/stl_tree.h (_Rb_tree::_M_move_assign): New functions.
	(_Rb_tree::operator=(_Rb_tree&&)): Dispatch to _M_move_assign.
	* testsuite/23_containers/map/77334.cc: New test.

	* doc/xml/api.xml: Replace hardcoded links for specific versions with
	link to docs for all releases.
	* doc/html/*: Regenerate.

	* include/bits/stl_iterator.h
	(operator-(reverse_iterator<Iter>, reverse_iterator<Iter>): Constrain
	for C++11 and later.
	* testsuite/24_iterators/reverse_iterator/71771.cc: New test.

2016-08-22  Release Manager

	* GCC 6.2.0 released.

2016-08-06  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-08-05  Jonathan Wakely  <jwakely@redhat.com>
